Fix header alignment

--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -54,16 +54,22 @@
     height: 19px;
   }
 
-  #header_right_menu {
+  ul#header_right_menu {
     position: relative;
-    display: flex;
+    @include flex-centered;
     justify-content: space-between;
+    height: 100%;
 
     .num-product {
       position: absolute;
       font-size: 0.9em;
-      top: 3px;
+      top: 18px;
       cursor: pointer;
+    }
+
+    li {
+      @include flex-centered;
+      height: 100%;
     }
   }
 
@@ -79,7 +85,7 @@
     background-color: $white;
     padding: 1em;
     position: absolute;
-    top: 34px;
+    top: 44px;
     right: 3em;
     text-align: right;
     width: 150px;
@@ -95,6 +101,12 @@
         padding: 5px 0px;
         justify-content: flex-end;
         width: 100%;
+        height: 100%;
+        font-size: 1.2em;
+
+        &:hover {
+          text-decoration: underline;
+        }
       }
   }
 }
