--- a/app/assets/stylesheets/mixins.scss
+++ b/app/assets/stylesheets/mixins.scss
@@ -27,3 +27,8 @@
   border-color: rgb(0, 0, 0);
 }
 
+@mixin flex-centered {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
